--- a/programs/dark-bonds/Cargo.toml
+++ b/programs/dark-bonds/Cargo.toml
@@ -16,4 +16,7 @@ cpi = ["no-entrypoint"]
 default = []
 
 [dependencies]
-anchor-lang = "0.25.0"
+anchor-lang = "0.27.0"
+anchor-spl = { git = "https://github.com/coral-xyz/anchor" }
+switchboard-v2 = "0.1.23"
+
