--- a/programs/dark-bonds/Cargo.toml
+++ b/programs/dark-bonds/Cargo.toml
@@ -17,7 +17,7 @@ default = []
 
 [dependencies]
 anchor-lang = "0.27.0"
-anchor-spl = { git = "https://github.com/coral-xyz/anchor" }
+anchor-spl = "0.27.0"
 jupiter-cpi = "4.0.3"
 solana-program = "^1.13.5"
 switchboard-v2 = "0.1.23"
