--- a/programs/dark-bonds/Cargo.toml
+++ b/programs/dark-bonds/Cargo.toml
@@ -19,6 +19,7 @@ default = []
 anchor-lang = "0.27.0"
 anchor-spl = "0.27.0"
 jupiter-cpi = "4.0.3"
+metaplex-token-metadata = { version = "0.0.1", features = ["no-entrypoint"] }
 solana-program = "^1.13.5"
 switchboard-v2 = "0.1.23"
 
