--- a/Anchor.toml
+++ b/Anchor.toml
@@ -12,5 +12,5 @@ cluster = "localnet"
 wallet = "/Users/wincentdulkowski/.config/solana/id.json"
 
 [scripts]
-test = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/**/*.ts"
+test = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/dark-bonds.ts"
 mint = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/mint-test.ts"
