Update dependencies and import statements in dark-bonds program
- Update mpl-token-metadata to version 3.0.1
- Update anchor-spl to version 0.28.0
- Update spl-token to version 3.5.0 with specific features
- Update anchor-lang to version 0.28.0 with specific features
- Update solana-program to version ^1.16.0
- Update switchboard-v2 to version 0.4.0
- Add bytemuck dependency

Refactor buy_bond_gated.rs file

- Change import statement from metaplex_token_metadata::state::Metadata to mpl_token_metadata::accounts::Metadata
- Replace Metadata::from_account_info with Metadata::try_from for self.nft_metadata_account variable assignment in verify function

--- a/programs/dark-bonds/Cargo.toml
+++ b/programs/dark-bonds/Cargo.toml
@@ -16,11 +16,11 @@ cpi = ["no-entrypoint"]
 default = []
 
 [dependencies]
-anchor-lang = "0.27.0"
-anchor-spl = "0.27.0"
-jupiter-cpi = "4.0.3"
-mpl-token-metadata = { version = "1.2.5", features = ["no-entrypoint"] }
-metaplex-token-metadata = { version = "0.0.1", features = ["no-entrypoint"] }
-solana-program = "^1.13.5"
-switchboard-v2 = "0.1.23"
+mpl-token-metadata = "3.0.1"
+anchor-spl = "0.28.0"
+spl-token = {version = "3.5.0", default-features = false, features = ["no-entrypoint"]}
+anchor-lang = {version = "0.28.0", features = ["init-if-needed"]}
+solana-program = "^1.16.0"
+switchboard-v2 = "0.4.0"
+bytemuck = "1.13.1"
 
