--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     },
     "dependencies": {
         "@metaplex-foundation/js": "^0.19.3",
+        "@metaplex-foundation/solita": "^0.20.0",
         "@project-serum/anchor": "^0.25.0",
         "@solana/spl-token": "^0.3.7"
     },
