--- a/package.json
+++ b/package.json
@@ -1,5 +1,11 @@
 {
+    "name": "dark-bonds",
+  "version": "0.1.0",
+  "private": true,
     "scripts": {
+        "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
         "lint:fix": "prettier */*.js \"*/**/*{.js,.ts}\" -w",
         "lint": "prettier */*.js \"*/**/*{.js,.ts}\" --check",
         "bd": "anchor build && anchor deploy",
@@ -9,7 +15,23 @@
         "@metaplex-foundation/js": "^0.19.3",
         "@metaplex-foundation/solita": "^0.20.0",
         "@project-serum/anchor": "^0.25.0",
-        "@solana/spl-token": "^0.3.7"
+        "@solana/spl-token": "^0.3.7",
+        "@reduxjs/toolkit": "^1.9.5",
+    "@types/node": "20.5.9",
+    "@types/react": "^18.2.21",
+    "@types/react-dom": "18.2.7",
+    "autoprefixer": "10.4.15",
+    "eslint": "8.48.0",
+    "eslint-config-next": "13.4.19",
+    "next": "13.4.19",
+    "postcss": "8.4.29",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-icons": "^4.11.0",
+    "react-redux": "^8.1.2",
+    "swr": "^2.2.2",
+    "tailwindcss": "3.3.3",
+    "typescript": "5.2.2"
     },
     "devDependencies": {
         "@types/bn.js": "^5.1.0",
