--- a/Anchor.toml
+++ b/Anchor.toml
@@ -2,14 +2,14 @@
 seeds = false
 skip-lint = false
 [programs.localnet]
-dark_bonds = "8ZP1cSpVPVPp5aeake5f1BtgW1xv1e39zkoG8bWobbwV"
+dark_bonds = "CkAJr4F6zYzDL2ov5uZgJFtupqzSsSuPXgh1Paed7K6n"
 
 [registry]
 url = "https://api.apr.dev"
 
 [provider]
 cluster = "localnet"
-wallet = "/Users/wincentdulkowski/.config/solana/id.json"
+wallet = "/Users/scottphillips/.config/solana/id.json"
 
 [scripts]
 test = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/dark-bonds.ts"
