--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,42 +1,38 @@
 {
   "compilerOptions": {
-    "types": [
-      "mocha",
-      "chai"
-    ],
-    "typeRoots": [
-      "./node_modules/@types"
-    ],
+    "types": ["mocha", "chai"],
+    "typeRoots": ["./node_modules/@types"],
     "lib": [
-      "es2015",
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
-    "module": "esnext",
+            "es2015",
+            "dom",
+            "dom.iterable",
+            "esnext"
+          ],
+    "module": "commonjs",
     "target": "es6",
     "allowJs": true,
-    "skipLibCheck": true,
-    "strict": true,
-    "noEmit": true,
-    "esModuleInterop": true,
-    "moduleResolution": "Node",
-    "resolveJsonModule": true,
-    "isolatedModules": true,
-    "jsx": "preserve",
-    "incremental": true,
-    "plugins": [
-      {
-        "name": "next"
-      }
-    ],
-    "paths": {
-      "@/*": [
-        "./*"
-      ]
-    },
-    "forceConsistentCasingInFileNames": true
+"skipLibCheck": true,
+"strict": true,
+"noEmit": true,
+"esModuleInterop": true,
+"moduleResolution": "Node",
+"resolveJsonModule": true,
+"isolatedModules": true,
+"jsx": "preserve",
+"incremental": true,
+"plugins": [
+         {
+           "name": "next"
+         }
+       ],
+  
+  "paths": {
+    "@/*": [
+      "./*"
+    ]
   },
+  "forceConsistentCasingInFileNames": true,
+},
   "include": [
     "next-env.d.ts",
     "**/*.ts",
@@ -47,3 +43,5 @@
     "node_modules"
   ]
 }
+
+
