--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "val": "solana-test-validator -ud --quiet --reset --bpf-program metaqbxxUerdq28cj1RbAWkYQm3ybzjb6a8bt518x1s ./metaplex_token_metadata_program.so"
     },
     "dependencies": {
+        "@coral-xyz/anchor": "^0.29.0",
         "@metaplex-foundation/js": "^0.19.3",
         "@metaplex-foundation/solita": "^0.20.0",
         "@project-serum/anchor": "^0.25.0",
